--- a/src/styles/GlobalStyles.css
+++ b/src/styles/GlobalStyles.css
@@ -1,3 +1,7 @@
+:root {
+    --primary-color: rgba(189,214,236,255);
+}
+
 * { 
     margin: 0;
     padding: 0;
@@ -8,4 +12,5 @@ html, body {
     min-height: 100vh;
     max-width: 100vw;
     overflow-x: hidden;
+    background: linear-gradient(135deg, var(--primary-color) 0%, white 15%, white 85%, var(--primary-color) 95%);
 }
