--- a/src/components/Modal/Modal.module.css
+++ b/src/components/Modal/Modal.module.css
@@ -10,6 +10,7 @@
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.85);
+    overflow: hidden;
 }
 
 .modalSection > .modalDiv {
@@ -17,17 +18,19 @@
     border: 2px solid black;
     border-radius: 20px;
     box-shadow: 1px 1px 10px white;
+    text-align: center;
     padding: 20px;
+    max-height: 80vh;
     max-width: 500px;
     width: 90%;
-    text-align: center;
+    overflow-y: auto;
 }
 
 .modalSection > .modalDiv > .modalClose {
     position: relative;
     cursor: pointer;
-    top: -20%;
     right: -40%;
+    color: red;
     border: 2px solid red;
     border-radius: 30px;
     padding: 5px;
@@ -42,5 +45,5 @@
 @media (max-width: 480px) {
     .modalSection > .modalDiv > .modalClose {
         font-size: 10px;
-    }    
+    }
 }
