refactor(src): first refactor after the feedback

--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,13 +1,11 @@
 .footerContainer {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
     position: fixed;
     bottom: 0;
     width: 100%;
-    padding: 40px 20px;
     background: linear-gradient(to top, black, white);
+    padding-top: 20px;
     color: #fff;
 }
   
@@ -15,28 +13,23 @@
     width: 100%;
     display: flex;
     justify-content: space-between;
-    align-items: flex-start;
-    margin-bottom: 30px;
 }
 
 .footerContainer > .footerContent > .footerLogo {
-    display: flex;
-    justify-content: space-between;
+    margin: auto 0;
 }
 
 .footerContact > h3 {
-    font-size: 24px;
-    margin-bottom: 15px;
+    font-size: 23px;
 }
 
 .footerContact > ul {
     list-style-type: none;
-    padding: 0;
-    font-size: 18px;
+    font-size: 14px;
 }
 
 .footerContact > ul > li {
-    margin-bottom: 10px;
+    margin-bottom: 5px;
 }
 
 .footerContact > ul > li > a {
@@ -48,11 +41,10 @@
     width: 100%;
     text-align: center;
     border-top: 1px solid #fff;
-    padding-top: 15px;
 }
 
 .footerBottom > p {
-    font-size: 18px;
+    font-size: 12px;
     margin: 0;
 }
 
