--- a/src/components/Form/Form.module.css
+++ b/src/components/Form/Form.module.css
@@ -32,6 +32,7 @@
     border-radius: 10px;
     border: 2px solid #ccc;
     font-size: 18px;
+    text-transform: uppercase;
     margin-bottom: 10px;
 }
 
