--- a/src/components/SearchByPlate/SearchByPlate.module.css
+++ b/src/components/SearchByPlate/SearchByPlate.module.css
@@ -20,6 +20,7 @@
     border: 2px solid #ccc;
     font-size: 18px;
     margin-bottom: 10px;
+    text-transform: uppercase;
 }
 
 .sectionSearchByPlate > .submitBtn {
