--- a/src/app/(pages)/infracaocompleta/[id]/InfracaoCompleta.module.css
+++ b/src/app/(pages)/infracaocompleta/[id]/InfracaoCompleta.module.css
@@ -64,12 +64,12 @@
     'localDaInfracao localDaInfracao localDaInfracao localDaInfracao municipio2 uf2 codigoDoRadar'
     'Condutor Condutor Responsavel Responsavel Destino Destino Destino'
     'nome nome proprietario proprietario quadraELote natureza natureza'
-    'TipoDaInfracao TipoDaInfracao TipoDaInfracao TipoDaInfracao TipoDaInfracao exampleInfringementPhoto exampleInfringementPhoto'
-    'grauDaInfracao grauDaInfracao grauDaInfracao grauDaInfracao grauDaInfracao exampleInfringementPhoto exampleInfringementPhoto'
-    'descricaoDaInfracao descricaoDaInfracao descricaoDaInfracao descricaoDaInfracao descricaoDaInfracao exampleInfringementPhoto exampleInfringementPhoto'
-    'equipamentoUtilizado equipamentoUtilizado equipamentoUtilizado equipamentoUtilizado equipamentoUtilizado exampleInfringementPhoto exampleInfringementPhoto'
-    'marca marca marca marca marca exampleInfringementPhoto exampleInfringementPhoto'
-    'modelo modelo modelo modelo modelo exampleInfringementPhoto exampleInfringementPhoto'
+    'TipoDaInfracao TipoDaInfracao TipoDaInfracao TipoDaInfracao TipoDaInfracao InfringementPhoto InfringementPhoto'
+    'grauDaInfracao grauDaInfracao grauDaInfracao grauDaInfracao grauDaInfracao InfringementPhoto InfringementPhoto'
+    'descricaoDaInfracao descricaoDaInfracao descricaoDaInfracao descricaoDaInfracao descricaoDaInfracao InfringementPhoto InfringementPhoto'
+    'equipamentoUtilizado equipamentoUtilizado equipamentoUtilizado equipamentoUtilizado equipamentoUtilizado InfringementPhoto InfringementPhoto'
+    'marca marca marca marca marca InfringementPhoto InfringementPhoto'
+    'modelo modelo modelo modelo modelo InfringementPhoto InfringementPhoto'
     'tipoDeMedicao tipoDeMedicao tipoDeMedicao tipoDeMedicao tipoDeMedicao limiteRegulamentado limiteRegulamentado'
     'medicaoRealizada medicaoRealizada medicaoRealizada medicaoRealizada medicaoRealizada dataHoraDaInfracao dataHoraDaInfracao'
     'valor valor valor valor valor recurso recurso'
@@ -110,7 +110,7 @@
 .quadraELote {grid-area: quadraELote;}
 .natureza {grid-area: natureza;}
 .TipoDaInfracao {grid-area: TipoDaInfracao;}
-.exampleInfringementPhoto {grid-area: exampleInfringementPhoto; width: 100%; height: 100%;}
+.InfringementPhoto {grid-area: InfringementPhoto; width: 100%; height: 100%;}
 .grauDaInfracao {grid-area: grauDaInfracao; text-align: center;}
 .descricaoDaInfracao {grid-area: descricaoDaInfracao;}
 .equipamentoUtilizado {grid-area: equipamentoUtilizado;}
