refactor(src): refactor all code to be better but with add or remove funcionalities

--- a/src/app/(pages)/infracaocompleta/[id]/InfracaoCompleta.module.css
+++ b/src/app/(pages)/infracaocompleta/[id]/InfracaoCompleta.module.css
@@ -45,6 +45,14 @@
     border: 1px solid black;
 }
 
+.main > div > .label {
+    font-weight: bold;
+}
+
+.main > div > .value {
+    text-transform: uppercase;
+}
+
 .label, .value {
     display: block;
 }
