--- a/src/app/(pages)/infracoes/Infracoes.module.css
+++ b/src/app/(pages)/infracoes/Infracoes.module.css
@@ -43,20 +43,18 @@
     right: 50px;
 }
 
-.searchAndFilterSection > .filterDiv {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-}
-
-.searchAndFilterSection > .filterDiv > select {
-    font-size: 16px;
+.searchAndFilterSection > .filterDiv > button {
+    background-color: var(--primary-color);
+    width: 100%;
+    border: none;
     padding: 18px;
-    border: 2px solid #ccc;
-    border-radius: 10px;
+    border-radius: 50px;
+    cursor: pointer;
+    transition: .2s;
 }
 
-.searchAndFilterSection > .filterDiv > .removeFilterButton:hover {
+.searchAndFilterSection > .filterDiv > button:hover {
+    background-color: lightgreen;
     transform: scale(1.1);
 }
 
