--- a/src/components/Buttons/ButtonStructure/ButtonStructure.module.css
+++ b/src/components/Buttons/ButtonStructure/ButtonStructure.module.css
@@ -1,23 +1,24 @@
 .button {
-    border: none;
-    border-bottom: 1px solid black;
-    padding: 20px;
     width: 30vw;
+    padding: 20px;
+    font-size: 15.5px;
+    border: none;
     border-radius: 50px;
+    box-shadow: 2px 2px 3px var(--Blue-primary-color);
+    /* background-color: var(--Blue-secondary-color); */
+    background-image: linear-gradient(10deg, var(--Blue-primary-color), white 90%);
     cursor: pointer;
-    font-weight: 500;
+    transition: .3s ease all;
 }
 
 .button:hover {
-    background-color: var(--primary-color);
+    background-color: var(--Blue-secondary-color);
     transform: scale(1.07);
-    transition: .3s;
 }
 
 .button:active {
-    background-color: var(--primary-color);
+    background-color: var(--Blue-secondary-color);
     transform: scale(0.95);
-    transition: .1s;
 }
 
 @media (min-width: 481px) and (max-width: 768px) {
