--- a/src/components/Modal/Modal.module.css
+++ b/src/components/Modal/Modal.module.css
@@ -1,45 +1,48 @@
 .modalSection {
-    position: fixed;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    position: fixed;
     z-index: 1000;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.85);
     overflow: hidden;
+    background-color: rgba(0, 0, 0, 0.85);
 }
 
 .modalSection > .modalDiv {
+    text-align: center;
+    padding: 20px;
+    max-width: 500px;
+    max-height: 80vh;
+    width: 90%;
+    overflow-y: auto;
     background-color: #fff;
     border: 2px solid black;
     border-radius: 20px;
-    box-shadow: 1px 1px 10px white;
-    text-align: center;
-    padding: 20px;
-    max-height: 80vh;
-    max-width: 500px;
-    width: 90%;
-    overflow-y: auto;
+    box-shadow: 2px 2px 10px white;
 }
 
 .modalSection > .modalDiv > .modalClose {
     position: relative;
     cursor: pointer;
     right: -40%;
-    color: red;
-    border: 2px solid red;
-    border-radius: 30px;
     padding: 5px;
     font-size: 18px;
+    color: var(--Red-primary-color);
+    border: 2px solid var(--Red-primary-color);
+    border-radius: 30px;
+    box-shadow: 5px 5px 7px var(--Red-primary-color);
+    transition: .3s ease;
 }
 
 .modalSection > .modalDiv > .modalClose:hover {
-    background-color: rgba(255, 0, 0, 0.3);
     color: white;
+    background-color: rgba(255, 0, 0, 0.3);
+    box-shadow: 3px 3px 7px var(--Red-primary-color);
 }
 
 @media (max-width: 480px) {
