--- a/src/components/Toast/Toast.module.css
+++ b/src/components/Toast/Toast.module.css
@@ -1,4 +1,8 @@
 .toast {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
     position: fixed;
     bottom: 20px;
     right: 20px;
@@ -7,24 +11,21 @@
     color: #fff;
     border-radius: 5px;
     box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.1);
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
     z-index: 2000;
-    transition: opacity 0.3s ease;
+    font-size: 18px;
+    animation: slideIn 0.5s ease-out forwards;
 }
 
 .toast > .progress-bar-container {
     width: 100%;
     height: 4px;
     border-radius: 2px;
-    overflow: hidden;
     margin-bottom: 10px;
+    overflow: hidden;
 }
 
 .toast > .progress-bar-container > .progress-bar {
     height: 100%;
     background-color: white;
-    transition: width 0.1s ease-out;
+    transition: 1s ease-out all;
 }
