--- a/src/hooks/Apis/useGetAllInfringiment/GetAllInfringiment.module.css
+++ b/src/hooks/Apis/useGetAllInfringiment/GetAllInfringiment.module.css
@@ -1,9 +1,9 @@
 .loading {
     text-align: center;
     font-size: 4vw;
-    color: #ff4654;
     text-shadow: 2px 2px black;
     margin-bottom: 30px;
+    color: var(--Red-primary-color);
 }
 
 .cardInfringementDiv {
@@ -12,13 +12,13 @@
     justify-content: center;
     flex-direction: column;
     text-align: start;
+    width: 15vw;
+    min-width: 250px;
+    padding: 30px 0px;
     background-color: #eee;
     border: 2px solid black;
     border-radius: 20px;
     box-shadow: 2px 2px 10px black;
-    width: 15vw;
-    min-width: 250px;
-    padding: 50px 0px;
 }
 
 .cardInfringementDiv > img {
@@ -26,25 +26,23 @@
 }
 
 .cardInfringementDiv > button {
-    cursor: pointer;
-    border: none;
+    font-weight: 500;
     border: 1px solid black;
     box-shadow: 2px 2px 5px black;
     width: 80%;
     margin-top: 5px;
     padding: 15px;
     border-radius: 50px;
-    font-weight: 500;
+    cursor: pointer;
 }
 
 .cardInfringementDiv > button:hover {
-    background-color: var(--primary-color);
+    background-color: var(--Blue-secondary-color);
     transform: scale(1.07);
-    transition: .3s;
+    transition: .3s ease all;
 }
 
 .cardInfringementDiv > button:active {
-    background-color: var(--primary-color);
+    background-color: var(--Blue-secondary-color);
     transform: scale(0.95);
-    transition: .1s;
 }
